# rs-addon-manager

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  eslint.config.mts  manifest.json  package.json
.github/workflows/: build-addon-gui.yml  build-addon-manager-gui.yml  build-addon-manager.yml  build-cli.yml  build-gui.yml  build-launcher-gui.yml  build-manifest.yml  build-tauri.yml  build.yml  check.yml  release.yml
addon-gui/: package.json  vite.config.ts
addon-gui/src/: App.vue  main.ts
addon-gui/src-tauri/: Cargo.toml  tauri.conf.json
addon-gui/src-tauri/bindings/: AddOnsFolderUserMeta.ts  AddOnsUserConfig.ts  Addon.ts  AddonRepository.ts  AddonWithMeta.ts  OperationEvent.ts  OperationType.ts  RepositoryWithMeta.ts
addon-gui/src-tauri/capabilities/: default.json
addon-gui/src-tauri/src/: addon_discovery.rs  addon_disk.rs  addon_meta.rs  addon_store.rs  clone.rs  git.rs  install.rs  install_feedback.rs  lib.rs  operation_tracker.rs  permission_workaround.rs  remove.rs  symlink.rs  update.rs  validate.rs  view_models.rs
addon-gui/src-tauri/tests/: test_git_download.rs
addon-gui/src/components/: AddonCloneModal.vue  AddonCollapse.vue  AddonFolderCollapse.vue  AddonFolderDeleteModal.vue  AddonFolderList.vue  AddonGlobalToolbar.vue  AddonRepoCard.vue  AddonRepoCloneModal.vue  AddonRepoDeleteModal.vue  AddonToolbar.vue  InstallStatusBar.vue  OperationEventLog.vue  ThemeController.vue  TimeoutButton.vue
addon-gui/src/composables/: useAddonData.ts  useGlobalError.ts  useOperationTracker.ts
addon-gui/src/views/: AddonManager.vue  HomeView.vue
addon-manager/: package.json  tsconfig.json
addon-manager-gui/: index.html  package.json  vite.config.ts
addon-manager-gui/src-tauri/: Cargo.toml  tauri.conf.json
addon-manager-gui/src-tauri/bindings/: AddOnsFolder.ts  AddonUserMeta.ts  FolderWithMeta.ts  OperationEventPayload.ts  OperationType.ts
addon-manager-gui/src-tauri/icons/: icon.icns
addon-manager-gui/src-tauri/src/: addon_discovery.rs  addon_disk.rs  addon_store.rs  install.rs  lib.rs  main.rs  operation_tracker.rs  remove.rs  symlink.rs  update.rs  validate.rs
addon-manager-gui/src/components/: AddonCatalogueModal.vue  AddonGlobalToolbar.vue  AddonRepoCard.vue  AddonRepoCloneModal.vue  OperationEventLog.vue  UpdateChecker.vue
addon-manager-gui/src/composables/: useAddonData.ts
addon-manager-gui/src/data/: addonCatalogue.ts
addon-manager-gui/src/utils/: importParser.ts
addon-manager-gui/src/views/: AddonManager.vue
addon-manager/src-tauri/: Cargo.toml  tauri.conf.json
addon-manager/src-tauri/bindings/: Addon.ts  AddonRepository.ts  AddonRepositoryUserMeta.ts  AddonSource.ts  OperationKey.ts
addon-manager/src-tauri/capabilities/: desktop.json
addon-manager/src-tauri/src/: addon_discovery.rs  addon_disk.rs  install.rs  lib.rs  main.rs  operation_reporter.rs  remove.rs  test_utils.rs  update.rs  view_models.rs
addon-manager/src/components/: AddonCatalogueModal.vue  AddonFolderCollapse.vue  AddonFolderList.vue  AddonGlobalToolbar.vue  AddonRepoCard.vue  AddonRepoCloneModal.vue  AddonRepoDeleteModal.vue  InstallAddonModal.vue
addon-manager/src/composables/: useAddonData.ts  useExternalLink.ts
addon-manager/src/data/: addonCatalogue.ts
addon-manager/src/utils/: importParser.test.ts  importParser.ts
addon-manager/src/views/: AddonManager.vue
downloader-cli/: .gitignore  Cargo.toml  README.md  app.rc  build.rs
downloader-cli/src/: config.rs  lib.rs  main.rs  prompt.rs  updater.rs  wait.rs
downloader-core/: Cargo.toml
downloader-core/src/: banner.rs  config.rs  constants.rs  format.rs  game.rs  lib.rs  manifest.rs  progress.rs  prompt.rs  transaction.rs
downloader-core/tests/: test_manifest_location.rs  test_manifest_parse.rs
launcher-gui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
launcher-gui/src/: App.vue  main.ts
launcher-gui/src-tauri/: Cargo.toml  tauri.conf.json
launcher-gui/src-tauri/capabilities/: default.json
launcher-gui/src-tauri/src/: lib.rs  main.rs
launcher-gui/src/components/: BottomBar.vue  MainContent.vue  MainContentCarousel.vue  ThemeController.vue  ToastMessages.vue  TopBar.vue
launcher-gui/src/layouts/: MainLayout.vue
launcher-gui/src/plugins/: i18n.ts
launcher-gui/src/types/: rs.ts
launcher-gui/src/utils/: format.ts
launcher-gui/src/views/: HomeView.vue
manifest-cdn/: Cargo.toml  manifest.json
manifest-cdn/src/: main.rs
tauri-game-launcher/: package-lock.json  package.json
tauri-game-launcher/src/: App.vue
tauri-game-launcher/src-tauri/: Cargo.toml  tauri.conf.json
tauri-game-launcher/src-tauri/capabilities/: default.json
tauri-game-launcher/src-tauri/src/: lib.rs
tauri-game-launcher/src/components/: BottomBar.vue  MainContent.vue  MainContentCarousel.vue  ThemeController.vue  TopBar.vue
tauri-game-launcher/src/types/: rs.ts
tauri-game-launcher/src/views/: HomeView.vue
