[package]
name = "downloader-cli"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = "4.5.28"
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
downloader-core = {path = "../downloader-core" }

[target.'cfg(not(unix))'.dependencies]
colored = "3.0.0"

[build]
target = "x86_64-unknown-linux-gnu"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[package.metadata.debian]
section = "utils"
priority = "optional"
standards-version = "3.9.8"
homepage = "https://github.com/yourusername/downloader-cli"
maintainer = "Your Name <youremail@example.com>"
description = "A command-line interface for the downloader"
long-description = "A more detailed description of your downloader-cli package."
depends = "downloader-core (>= 0.1.0), libc6 (>= 2.34)"
recommends = "curl, wget"
suggests = "git, make"
breaks = "downloader-cli (< 0.1.4)"
replaces = "downloader-cli (< 0.1.4)"

[package.metadata.rpm]
name = "downloader-cli"
version = "0.1.4"
release = "1%{?dist}"
summary = "A command-line interface for the downloader"
license = "MIT"
url = "https://github.com/yourusername/downloader-cli"
source0 = "%{name}-%{version}.tar.gz"
BuildRequires = "rust, cargo"
Requires = "downloader-core >= 0.1.0, glibc >= 2.34"

%description
A more detailed description of your downloader-cli package.

%prep
%setup -q

%build
cargo build --release --locked

%install
mkdir -p %{buildroot}/usr/bin
install -m 755 target/release/downloader-cli %{buildroot}/usr/bin/

%files
/usr/bin/downloader-cli

%changelog
* Fri Mar 10 2023 Your Name <youremail@example.com> - 0.1.4-1
- Initial RPM release
