[package]
name = "downloader-cli"
version = "0.1.10"
edition = "2021"

[dependencies]
clap = "4.5.28"
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
downloader-core = {path = "../downloader-core" }

[target.'cfg(not(unix))'.dependencies]
colored = "3.0.0"

[features]
default = ["demo"]
demo = ["downloader-core/demo"]
production = ["downloader-core/production"]
