[package]
name = "downloader-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
downloader-core = {path = "../downloader-core", features = ["cli"] }
self_update = "0.42.0"
url = "2.5.4"

[target.'cfg(not(unix))'.dependencies]
colored = "3.0.0"

[features]
default = ["demo"]
demo = ["downloader-core/demo"]
production = ["downloader-core/production"]
