[package]
name = "downloader-core"
version = "0.2.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"], optional = true }
colored = "3.0.0"
figlet-rs = "0.1.5"
futures = "0.3.31"
humansize = "2.1.3"
md5 = "0.7.0"
reqwest = { version = "0.12.12", features = ["stream"] }
self_update = "0.42"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[features]
default = ["demo"]
demo = []
production = []
cli = ["clap"]
