[package]
name = "manifest-cdn"
version = "0.2.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
md5 = "0.8.0"
serde = "1.0.219"
serde_json = "1.0.141"
uuid = { version = "1", features = ["v4"]}
walkdir = "2.5.0"
downloader-core = {path = "../downloader-core", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tiny_http = "0.12.0"
