[package]
name = "addon-manager"
version = "0.4.0"
description = "A cross-platform addon manager for installing, updating, and managing addons using Git."
authors = ["sogladev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "addon_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_family = "windows")'.dependencies]
junction = "1.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dependencies]
url = "2.5.4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20.2"
regex = "1.11.1"
chrono = "0.4.41"
itertools = "0.14.0"
ts-rs = "11.0.1"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
clap = { version = "4.5.47", features = ["derive"] }

