[package]
name = "launcher-gui"
version = "0.1.9"
description = "Tauri Game Launcher"
authors = ["sogladev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_game_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
downloader-core = { path = "../../downloader-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tokio = "1.43.0"
futures = "0.3.31"
tauri-plugin-store = "2"

[features]
default = ["demo"]
demo = ["downloader-core/demo"]
production = ["downloader-core/production"]
